fixed social icons not showing on iphone

--- a/docs/style.css
+++ b/docs/style.css
@@ -850,6 +850,8 @@ footer {
     background: rgba(255, 255, 255, 0.1);
     color: #aeb7c8;
     transition: transform 0.12s;
+    align-items: center;
+    justify-content: center;
 
 }
 
@@ -858,6 +860,8 @@ footer {
 }
 
 .ico {
+    width: 48px;
+    height: 48px;
     fill: currentColor; /* #aeb7c8 */
     transition: fill 0.2s;
 
